feat: improve deck and cards to add manually
